crates/aquascope/tests/snapshots/permissions__add_ref@if_2.test.snap
---
source: crates/aquascope/tests/permissions.rs
description: add_ref@if_2.test
---
- - 0
  - - - "*n"
      - is_live:
          type: High
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
          write:
            type: None
            value: false
          drop:
            type: High
    - - "*v"
      - is_live:
          type: High
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: High
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: None
            value: false
    - - n
      - is_live:
          type: High
        type_droppable:
          type: High
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
          write:
            type: None
            value: false
          drop:
            type: High
    - - v
      - is_live:
          type: High
        type_droppable:
          type: High
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
          write:
            type: None
            value: false
          drop:
            type: High
- - 1
  - - - v2
      - is_live:
          type: High
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: High
- - 3
  - - - "*v"
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: High
        loan_write_refined:
          type: High
        loan_drop_refined:
          type: High
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: None
            value: false
    - - v
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: High
        loan_write_refined:
          type: High
        loan_drop_refined:
          type: High
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: Low
- - 5
  - - - v2
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: High
        loan_write_refined:
          type: High
        loan_drop_refined:
          type: High
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low
- - 6
  - - - "*r"
      - is_live:
          type: High
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: None
            value: false
    - - r
      - is_live:
          type: High
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: Low
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
          write:
            type: None
            value: false
          drop:
            type: High
- - 7
  - - - x
      - is_live:
          type: High
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: Low
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
          write:
            type: None
            value: false
          drop:
            type: High
    - - y
      - is_live:
          type: High
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: Low
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: High
          write:
            type: None
            value: false
          drop:
            type: High
- - 8
  - - - "*n"
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: Low
    - - n
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: Low
- - 9
  - - - x
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: Low
    - - y
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: Low
- - 10
  - - - "*r"
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: None
            value: false
    - - "*v"
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: Low
        loan_write_refined:
          type: Low
        loan_drop_refined:
          type: Low
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: None
            value: false
    - - r
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: Low
    - - v
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: Low
        loan_write_refined:
          type: Low
        loan_drop_refined:
          type: Low
        permissions:
          read:
            type: High
          write:
            type: None
            value: false
          drop:
            type: High
    - - v2
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: Low
        loan_write_refined:
          type: Low
        loan_drop_refined:
          type: Low
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: High
- - 11
  - - - v2
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low
- - 12
  - - - "*v"
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: None
            value: false
    - - v
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
        loan_write_refined:
          type: None
        loan_drop_refined:
          type: None
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: Low

