crates/aquascope/tests/snapshots/permissions__dump_me@linear_0.test.snap
---
source: crates/aquascope/tests/permissions.rs
description: dump_me@linear_0.test
---
- - 3
  - - - x
      - is_live:
          type: High
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        loan_read_refined:
          type: None
          value: false
        loan_write_refined:
          type: None
          value: false
        loan_drop_refined:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: High
- - 5
  - - - y
      - is_live:
          type: High
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        loan_read_refined:
          type: None
          value: false
        loan_write_refined:
          type: None
          value: false
        loan_drop_refined:
          type: None
          value: false
        path_moved:
          type: Low
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: High
- - 7
  - - - "*z"
      - is_live:
          type: High
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: true
        loan_read_refined:
          type: None
          value: false
        loan_write_refined:
          type: None
          value: false
        loan_drop_refined:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: High
    - - x
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        loan_read_refined:
          type: High
        loan_write_refined:
          type: High
        loan_drop_refined:
          type: High
        path_moved:
          type: None
          value: false
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low
    - - z
      - is_live:
          type: High
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        loan_read_refined:
          type: None
          value: false
        loan_write_refined:
          type: None
          value: false
        loan_drop_refined:
          type: None
          value: false
        path_moved:
          type: Low
        permissions:
          read:
            type: High
          write:
            type: None
            value: false
          drop:
            type: High
- - 9
  - - - y
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        loan_read_refined:
          type: None
          value: false
        loan_write_refined:
          type: None
          value: false
        loan_drop_refined:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low
- - 11
  - - - "*z"
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: true
        loan_read_refined:
          type: None
          value: false
        loan_write_refined:
          type: None
          value: false
        loan_drop_refined:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low
    - - z
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        loan_read_refined:
          type: None
          value: false
        loan_write_refined:
          type: None
          value: false
        loan_drop_refined:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: Low

