crates/aquascope/tests/snapshots/permissions__main@if_0.test.snap
---
source: crates/aquascope/tests/permissions.rs
description: main@if_0.test
---
- - 1
  - - - s1
      - is_live:
          type: High
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
          value: ~
        loan_write_refined:
          type: None
          value: ~
        loan_drop_refined:
          type: None
          value: ~
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: High
- - 2
  - - - s2
      - is_live:
          type: High
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: Low
        loan_read_refined:
          type: None
          value: ~
        loan_write_refined:
          type: None
          value: ~
        loan_drop_refined:
          type: None
          value: ~
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: High
- - 5
  - - - s1
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: High
        loan_write_refined:
          type: High
        loan_drop_refined:
          type: High
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low
- - 7
  - - - s2
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: High
        loan_write_refined:
          type: High
        loan_drop_refined:
          type: High
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low
- - 8
  - - - "*b"
      - is_live:
          type: High
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
          value: ~
        loan_write_refined:
          type: None
          value: ~
        loan_drop_refined:
          type: None
          value: ~
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: None
            value: false
    - - b
      - is_live:
          type: High
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: Low
        loan_read_refined:
          type: None
          value: ~
        loan_write_refined:
          type: None
          value: ~
        loan_drop_refined:
          type: None
          value: ~
        permissions:
          read:
            type: High
          write:
            type: None
            value: false
          drop:
            type: High
- - 10
  - - - "*b"
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: false
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
          value: ~
        loan_write_refined:
          type: None
          value: ~
        loan_drop_refined:
          type: None
          value: ~
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: None
            value: false
    - - b
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: false
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
          value: ~
        loan_write_refined:
          type: None
          value: ~
        loan_drop_refined:
          type: None
          value: ~
        permissions:
          read:
            type: Low
          write:
            type: None
            value: false
          drop:
            type: Low
    - - s1
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: Low
        loan_write_refined:
          type: Low
        loan_drop_refined:
          type: Low
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: High
    - - s2
      - is_live:
          type: None
          value: true
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: Low
        loan_write_refined:
          type: Low
        loan_drop_refined:
          type: Low
        permissions:
          read:
            type: High
          write:
            type: High
          drop:
            type: High
- - 12
  - - - s1
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
          value: ~
        loan_write_refined:
          type: None
          value: ~
        loan_drop_refined:
          type: None
          value: ~
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low
- - 13
  - - - s2
      - is_live:
          type: Low
        type_droppable:
          type: None
          value: true
        type_writeable:
          type: None
          value: true
        path_moved:
          type: None
          value: false
        loan_read_refined:
          type: None
          value: ~
        loan_write_refined:
          type: None
          value: ~
        loan_drop_refined:
          type: None
          value: ~
        permissions:
          read:
            type: Low
          write:
            type: Low
          drop:
            type: Low

